fix: spacing and sizing of goal icons

--- a/src/pages/MyGoalsPage/MyGoalsPage.scss
+++ b/src/pages/MyGoalsPage/MyGoalsPage.scss
@@ -75,8 +75,8 @@
 }
 
 .goal-dd-inner {
-  width: 16px;
-  height: 16px;
+  width: 24px;
+  height: 24px;
   margin-top: 2.7px;
   margin-left: 2.2px;
   border-radius: 50%;
@@ -85,8 +85,8 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 19px;
-  height: 19px;
+  width: 27px;
+  height: 27px;
   border: solid;
   border-width: 1.4px;
   border-radius: 50%;
